--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   .book { position: relative; width:300px; height:533px; margin:auto; perspective:1500px; cursor:pointer; }
   .page { position:absolute; width:100%; height:100%; top:0; left:0; border-radius:12px; backface-visibility:hidden; transition: transform 0.6s ease; }
   .page img { width:100%; height:100%; object-fit:cover; border-radius:12px; }
-  .arrow { position:absolute; top:50%; transform:translateY(-50%); font-size:2em; color:rgba(255,255,255,0.8); text-shadow:0 0 5px black; pointer-events:none; user-select:none; font-weight:bold; }
+  .arrow { position:absolute; top:50%; transform:translateY(-50%); font-size:2em; color:rgba(255,255,255,0.8); text-shadow:0 0 5px black; font-weight:bold; pointer-events:auto; cursor:pointer; }
   .arrow-left { left:5px; }
   .arrow-right { right:5px; }
 </style>
@@ -77,7 +77,7 @@
 <script>
   // Confetes
   const intro = document.getElementById('introScreen');
-  for(let i=0;i<150;i++){
+  for(let i=0;i<100;i++){ // reduzi pra 100 confetes
     const confetti = document.createElement('div');
     confetti.className='confetti';
     confetti.style.left=Math.random()*100+'%';
@@ -106,12 +106,12 @@
   <p>Com todo meu amor, </p> <b>Antônio Neto</b>
 </header>
 
-<!-- Álbum sempre aberto -->
+<!-- Álbum -->
 <section class="gallery-book">
   <h2>Álbum</h2>
   <div id="bookContainer">
     <div class="book" id="book">
-      <div class="page" id="currentPage"><img src="Fotos/IMG-20250616-WA0018.jpg" alt="Foto"></div>
+      <div class="page" id="currentPage"><img src="fotos/IMG-20250616-WA0018.jpg" alt="Foto"></div>
       <div class="page" id="nextPage" style="transform: rotateY(180deg);"></div>
       <div class="arrow arrow-left">◀</div>
       <div class="arrow arrow-right">▶</div>
@@ -155,7 +155,7 @@ document.addEventListener("DOMContentLoaded", function() {
   }
   setInterval(atualizarContador,1000); atualizarContador();
 
-  // Álbum com suas fotos reais
+  // Álbum
   const fotos = [
     "fotos/IMG-20250616-WA0018.jpg",
     "fotos/IMG-20250616-WA0019.jpg",
@@ -194,6 +194,7 @@ document.addEventListener("DOMContentLoaded", function() {
       nextPage.innerHTML="";
   }
 
+  // clique no livro inteiro
   document.getElementById("book").addEventListener("click", e=>{
     const clickX=e.offsetX;
     const width=e.currentTarget.offsetWidth;
@@ -202,6 +203,18 @@ document.addEventListener("DOMContentLoaded", function() {
     } else { 
       if(currentIndex<fotos.length-1) currentIndex++; 
     }
+    updateBook();
+  });
+
+  // clique nas setas
+  document.querySelector(".arrow-left").addEventListener("click", e=>{
+    e.stopPropagation();
+    if(currentIndex>0) currentIndex--; 
+    updateBook();
+  });
+  document.querySelector(".arrow-right").addEventListener("click", e=>{
+    e.stopPropagation();
+    if(currentIndex<fotos.length-1) currentIndex++; 
     updateBook();
   });
 
