--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <h2>Álbum</h2>
   <div id="bookContainer">
     <div class="book" id="book">
-      <div class="page" id="currentPage"><img src="fotos/IMG-20250616-WA0018.jpg" alt="Foto"></div>
+      <div class="page" id="currentPage"><img src="IMG-20250616-WA0018.jpg" alt="Foto"></div>
       <div class="page" id="nextPage" style="transform: rotateY(180deg);"></div>
       <div class="arrow arrow-left">◀</div>
       <div class="arrow arrow-right">▶</div>
@@ -157,13 +157,13 @@ document.addEventListener("DOMContentLoaded", function() {
 
   // Álbum
   const fotos = [
-    "fotos/IMG-20250616-WA0018.jpg",
-    "fotos/IMG-20250616-WA0019.jpg",
-    "fotos/IMG-20250616-WA0020.jpg",
-    "fotos/IMG-20250616-WA0022.jpg",
-    "fotos/IMG-20250624-WA0058.jpg",
-    "fotos/IMG-20250627-WA0177.jpg",
-    "fotos/IMG-20250628-WA0021.jpg",
+    "IMG-20250616-WA0018.jpg",
+    "IMG-20250616-WA0019.jpg",
+    "IMG-20250616-WA0020.jpg",
+    "IMG-20250616-WA0022.jpg",
+    "IMG-20250624-WA0058.jpg",
+    "IMG-20250627-WA0177.jpg",
+    "IMG-20250628-WA0021.jpg",
     "fotos/IMG-20250628-WA0027.jpg",
     "fotos/IMG-20250628-WA0120.jpg",
     "fotos/IMG-20250628-WA0280.jpg",
